--- a/prapronombres.html
+++ b/prapronombres.html
@@ -138,15 +138,15 @@
       </div>
     
      <div class="session">
-        <audio src="https://polyglots-at.github.io/at/You%20are%20my%20friend.mp3" controls></audio>
-        <p>He: He is a doctor</p>
+        <audio src="https://polyglots-at.github.io/at/heisadoctor.mp3" controls></audio>
+        <p> He is a doctor</p>
         <p>Jí is a doctor</p>
         <p>Él es un doctor</p>
         <input type="text" placeholder="Escribe aquí tu respuesta">   
        </div>
 
     <div class="session">
-    <audio src="https://polyglots-at.github.io/at/You%20are%20my%20friend.mp3" controls></audio>
+    <audio src="https://polyglots-at.github.io/at/shelistenstomusic.mp3" controls></audio>
      <p>She listens to music</p>
      <p>Shi li-sens tu myu-sik</p>
      <p>(Ella escucha música) </p>
@@ -154,7 +154,7 @@
     </div>
 
 <div class="session">
-<audio src="https://polyglots-at.github.io/at/You%20are%20my%20friend.mp3" controls></audio>
+<audio src="https://polyglots-at.github.io/at/Itisraining.mp3" controls></audio>
  <p>It is raining.</p>
  <p>it is rei-ning</p>
  <p>Está lloviendo</p>
@@ -162,7 +162,7 @@
 </div>
 
 <div class="session">
-    <audio src="https://polyglots-at.github.io/at/You%20are%20my%20friend.mp3" controls></audio>
+    <audio src="https://polyglots-at.github.io/at/Wearegoingtothepark.mp3" controls></audio>
      <p>We are going to the park</p>
      <p>wi ar gou-ing tu da park</p>
      <p>Nosotros vamos al parque</p>
@@ -170,7 +170,7 @@
     </div>
     
  <div class="session">
-        <audio src="https://polyglots-at.github.io/at/You%20are%20my%20friend.mp3" controls></audio>
+        <audio src="https://polyglots-at.github.io/at/Theyareplayingsoccer.mp3" controls></audio>
          <p>They are playing soccer</p>
          <p>dhey ar plei-ing sa-ker</p>
          <p>Ellos están jugando fútbol</p>
