--- a/contpronombres.html
+++ b/contpronombres.html
@@ -13,8 +13,7 @@
       color: white;
       margin: 0;
       padding: 20px;
-      height: 100vh;
-      overflow-y: scroll;
+      line-height: 1.6;
     }
 
     .text-container {
@@ -22,54 +21,76 @@
       max-width: 800px;
       margin: auto;
       background-color: rgba(255, 255, 255, 0.1);
-      padding: 20px;
+      padding: 30px;
       border-radius: 15px;
       box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
     }
 
-    p, li {
-      color: #f0f8ff;
-      font-size: 18px;
-      margin: 10px 0;
-    }
-
     h2 {
       color: #f0f8ff;
-      font-size: 24px;
-      margin-top: 20px;
+      font-size: 26px;
+      margin-bottom: 15px;
+      border-bottom: 2px solid #f0f8ff;
+      padding-bottom: 5px;
+    }
+
+    p {
+      color: #f0f8ff;
+      font-size: 18px;
+      margin: 15px 0;
+      text-align: justify;
+    }
+
+    ul {
+      color: #f0f8ff;
+      font-size: 18px;
+      margin: 15px 0;
+      padding-left: 20px;
+    }
+
+    li {
+      margin: 10px 0;
     }
   </style>
 </head>
 <body>
   <div class="text-container">
     <h2>Pronombres personales</h2>
-    <p>I (Yo)<br>
-       You (Tú/Usted)<br>
-       He (Él)<br>
-       She (Ella)<br>
-       It (Eso/Esa)<br>
-       We (Nosotros/Nosotras)<br>
-       They (Ellos/Ellas)</p>
+    <ul>
+      <li>I (Yo)</li>
+      <li>You (Tú/Usted)</li>
+      <li>He (Él)</li>
+      <li>She (Ella)</li>
+      <li>It (Eso/Esa)</li>
+      <li>We (Nosotros/Nosotras)</li>
+      <li>They (Ellos/Ellas)</li>
+    </ul>
+
     <h2>Diferencias entre el Español y el Inglés</h2>
-    <p>I vs. Yo: En inglés, «I» siempre se escribe con mayúscula, mientras que en español «yo» solo se capitaliza al inicio de una oración.</p>
-    <p>You vs. Tú/Usted: El inglés usa «you» tanto para singular como para plural y formalidad o informalidad, mientras que el español distingue entre «tú» (informal), «usted» (formal) y «ustedes» (plural).</p>
-    <p>He/She/It vs. Él/Ella/Eso: En inglés, «it» se usa para objetos, animales y conceptos neutros, mientras que en español se usa «él» o «ella» según el género gramatical del sustantivo. «It» no tiene equivalente directo en español.</p>
-    <p>We vs. Nosotros/Nosotras: En inglés, no hay distinción de género en «we», mientras que en español «nosotros» (masculino) y «nosotras» (femenino) se usan según el grupo.</p>
-    <p>They vs. Ellos/Ellas: Similar a «we», «they» no distingue género en inglés, pero en español se usa «ellos» (masculino) y «ellas» (femenino).</p>
+    <p><b>I vs. Yo:</b> En inglés, «I» siempre se escribe con mayúscula, mientras que en español «yo» solo se capitaliza al inicio de una oración.</p>
+    <p><b>You vs. Tú/Usted:</b> El inglés usa «you» tanto para singular como para plural y formalidad o informalidad, mientras que el español distingue entre «tú» (informal), «usted» (formal) y «ustedes» (plural).</p>
+    <p><b>He/She/It vs. Él/Ella/Eso:</b> En inglés, «it» se usa para objetos, animales y conceptos neutros, mientras que en español se usa «él» o «ella» según el género gramatical del sustantivo. «It» no tiene equivalente directo en español.</p>
+    <p><b>We vs. Nosotros/Nosotras:</b> En inglés, no hay distinción de género en «we», mientras que en español «nosotros» (masculino) y «nosotras» (femenino) se usan según el grupo.</p>
+    <p><b>They vs. Ellos/Ellas:</b> Similar a «we», «they» no distingue género en inglés, pero en español se usa «ellos» (masculino) y «ellas» (femenino).</p>
+
     <h2>Errores Comunes</h2>
-    <p>Confundir «he» y «she»: Esto puede suceder si en el idioma nativo no hay una distinción clara de género en los pronombres.</p>
-    <p>Uso incorrecto de «it»: Usar «it» para referirse a personas o animales conocidos por su nombre/género.</p>
-    <p>Mayúsculas en «I»: Olvidar capitalizar «I» en medio de una oración.</p>
-    <p>Doble sujeto: Evitar usar «I» junto con «me» en la misma frase como «I me go».</p>
+    <ul>
+      <li><b>Confundir «he» y «she»:</b> Esto puede suceder si en el idioma nativo no hay una distinción clara de género en los pronombres.</li>
+      <li><b>Uso incorrecto de «it»:</b> Usar «it» para referirse a personas o animales conocidos por su nombre/género.</li>
+      <li><b>Mayúsculas en «I»:</b> Olvidar capitalizar «I» en medio de una oración.</li>
+      <li><b>Doble sujeto:</b> Evitar usar «I» junto con «me» en la misma frase como «I me go».</li>
+    </ul>
+
     <h2>Ejemplos para Practicar</h2>
-    <p>Pronombres sujetos:</p>
-    <p>I: I am learning English. (Yo estoy aprendiendo inglés).</p>
-    <p>You: You are my friend. (Tú eres mi amigo/a).</p>
-    <p>He: He is a doctor. (Él es un doctor).</p>
-    <p>She: She likes music. (Ella gusta la música).</p>
-    <p>It: It is raining. (Está lloviendo).</p>
-    <p>We: We are going to the park. (Nosotros vamos al parque).</p>
-    <p>They: They are playing soccer. (Ellos están jugando fútbol).</p>
+    <ul>
+      <li><b>I:</b> I am learning English. (Yo estoy aprendiendo inglés).</li>
+      <li><b>You:</b> You are my friend. (Tú eres mi amigo/a).</li>
+      <li><b>He:</b> He is a doctor. (Él es un doctor).</li>
+      <li><b>She:</b> She likes music. (A ella le gusta la música).</li>
+      <li><b>It:</b> It is raining. (Está lloviendo).</li>
+      <li><b>We:</b> We are going to the park. (Nosotros vamos al parque).</li>
+      <li><b>They:</b> They are playing soccer. (Ellos están jugando fútbol).</li>
+    </ul>
   </div>
 </body>
 </html>
