--- a/platpronombres.html
+++ b/platpronombres.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -19,6 +18,7 @@
       color: #fff;
       font-family: 'Times New Roman', Times, serif;
       line-height: 1.6;
+      text-align: center;
     }
 
     .container {
@@ -33,27 +33,6 @@
       width: 120px;
       height: auto;
       margin: 20px 0;
-    }
-
-    /* Estilos del menú */
-    .menu {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      padding: 20px 0;
-    }
-
-    .menu a {
-      text-decoration: none;
-      color: #fff;
-      font-size: 18px;
-      padding: 10px 20px;
-      border-radius: 5px;
-      transition: background-color 0.3s ease;
-    }
-
-    .menu a:hover {
-      background-color: #340899;
     }
 
     /* Estilos del contenido */
@@ -74,15 +53,17 @@
 
     /* Estilo de los botones/círculos */
     .circles {
-        display: flex;
+      display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      align-items: center
+      align-items: center;
+      gap: 20px;
+      margin-top: 20px;
     }
 
     .circle {
-      width: 100px;
-      height: 100px;
+      width: 120px;
+      height: 120px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -92,7 +73,7 @@
       border-radius: 80%;
       overflow: hidden;
       transition: transform 0.3s ease, border-color 0.3s ease;
-      margin-right: 10px; 
+      margin-bottom: 20px;
     }
 
     .circle:hover {
@@ -119,7 +100,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: #418de4 (0, 0, 0, 0.8);
+      background-color: rgba(0, 0, 0, 0.8);
       z-index: 1000;
       justify-content: center;
       align-items: center;
@@ -152,22 +133,37 @@
       font-size: 1rem;
       transition: background-color 0.3s ease;
     }
+
+    /* Media Queries para móviles */
+    @media (max-width: 768px) {
+      .circle {
+        width: 90px;
+        height: 90px;
+      }
+
+      .content h1 {
+        font-size: 2.5rem;
+      }
+
+      .menu {
+        flex-direction: column;
+      }
+
+      .menu a {
+        margin: 5px 0;
+        font-size: 16px;
+      }
+    }
   </style>
 </head>
 <body>
   <div class="container">
-    <!-- Logo de la plataforma -->
-
-    <!-- Menú de navegación -->
-
-
     <!-- Contenido de la página -->
     <div class="content">
-      <h1> Pronombres personales </h1>
-
+      <h1>Pronombres personales</h1>
       <div class="circles">
         <a href="#" onclick="showNotification('notification2')" class="circle" title="contenido">
-        <img src="https://polyglots-at.github.io/at/contenido.png" alt="contenido">
+          <img src="https://polyglots-at.github.io/at/contenido.png" alt="contenido">
           <p>contenido</p>
         </a>
         <a href="#" onclick="showNotification('notification3')" class="circle" title="fonetica">
@@ -175,7 +171,7 @@
           <p>fonetica</p>
         </a>
         <a href="#" onclick="showNotification('notification4')" class="circle" title="gramatica">
-        <img src="https://polyglots-at.github.io/at/gramatica.png" alt="gramatica">
+          <img src="https://polyglots-at.github.io/at/gramatica.png" alt="gramatica">
           <p>gramatica</p>
         </a>
         <a href="#" onclick="showNotification('notification5')" class="circle" title="practica">
